syntax = "proto3";
package file;
option go_package = "cloudos/common/pb";

message File {
    int64 id = 1;
    int64 owner = 2;
    int64 parent_id = 3;
    string name = 4;
    string feature = 5;
    string md5 = 6;
    int64 size = 7;
    string path = 8;
    string content_type = 9;
    string password = 10;

    int64 create_time = 1001;
    int64 update_time = 1002;
    int64 delete_time = 1003;
}


enum FileFeature {
    FILE = 0; // 文件
    FOLDER = 1; // 文件夹
}