syntax = "proto3";
package note_service;
option go_package = "superserver/domain/note_service";

import "public/common.proto";

message Note {
    int32 id = 1; // 主键
    int32 folder_id = 2; // 文件夹ID
    int32 topic_id = 3; // 主题ID
    string sign = 4; // 签名:内容+时间
    string title = 5; // 标题
    bool public = 6; // 公开的
    string content = 7; // 笔记内容

    int64 delete_time = 1001; // 删除时间 时间戳：秒
    int64 create_time = 1002; // 创建时间 时间戳：秒
    int64 update_time = 1003; // 最后更新时间 时间戳：秒
    int32 creator = 1004; // 创建人
    int32 updater = 1005; // 更新人
}

message NoteFilter {
    repeated int32 ids = 1;
    repeated int32 folder_ids = 2;
    repeated int32 topic_ids = 3;
    public.BooleanScope public_select = 4;

    public.BetweenInt64 delete_time_range = 101;
    public.BetweenInt64 create_time_range = 102;
    public.BetweenInt64 update_time_range = 103;
    repeated int32 creators = 104;
    repeated int32 updaters = 105;

    public.BooleanScope deleted = 500;

    Keywords keywords = 201;
    message Keywords {
        string keyword = 1;
        string title = 2;
    }
}

message ListNoteParams {
    public.Header header = 1;
    public.Pager pager = 2;
    repeated public.Sort sorts = 3;
    NoteFilter filter = 4;
}

message ListNoteReply {
    public.ReplyHeader header = 1;
    public.Pager pager = 2;
    repeated Note data = 3;
}

message OperateNoteParams {
    public.Header header = 1;
    public.Operation operate = 2;
    Note data = 3;
}

message OperateNoteReply {
    public.ReplyHeader header = 1;
    Note data = 2;
}

message BatchOperateNoteParams {
    public.Header header = 1;
    public.Operation operate = 2;
    repeated Note data = 3;
}

message BatchOperateNoteReply {
    public.ReplyHeader header = 1;
}
